Minor fix that could've caused Jitpack Compile Error